<resources>
    <string name="app_name">BogoBici</string>
    <string name="user_email">Usuario o correo</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="olvido_contrasenia">¿Olvidaste la contraseña?</string>
    <string name="registrarse">Resgistrarse</string>
    <string name="facebook">Continuar con Facebook</string>
    <string name="google">Continuar con Google</string>
    <string name="create_new_account">Crea una nueva de BogoBici</string>
    <string name="registrarse_bton">Registrate</string>
    <string name="name">Nombre</string>
    <string name="correo">Correo eléctronico</string>
    <string name="number_phone">Número de telefono</string>
    <string name="send_notification">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Registro</string>
    <string name="name_photo">Finaliza tu registro</string>
    <string name="back_bton">Botón para regresar de pestaña</string>
    <string name="upload_bton">Botón para subir una foto o imagen</string>
    <string name="name_upload">Escribe tu nombre</string>
    <string name="adventure">Tu próxima aventura empieza aquí</string>
    <string name="before_sports">Planifica mejor tus rutas, sientete libre de escoger la ruta que mejor se adapte a ti, y ten en cuenta que la seguridad es lo primordial para nosotros.</string>
    <string name="choose_sport">¿Cúales deportes practicas?</string>
    <string name="choose_sport_text">Cuentanos que deportes te gustan para recibir recomendaciones de rutas.</string>
    <string name="routes_recomendations">Recomendación del día</string>
    <string name="logout_icon">logout_icon</string>
    <string name="notification_icon">notification_icon</string>
    <string name="perfil">Perfil</string>
    <string name="photo_select">photo_select</string>
</resources>