<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/title_bogobici_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100sp"
        android:paddingLeft="80sp"
        android:paddingTop="15sp"
        android:text="@string/create_new_account"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_log_up_margin"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_text_log_up"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_log_up_margin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_log_up_margin"
        android:ems="10"
        android:hint="@string/number_phone"
        android:inputType="phone" />

    <Button
        android:id="@+id/log_up_button"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:height="@dimen/heigh_bton"
        android:backgroundTint="@color/green_bogo_bici"
        android:fontFamily="@font/inter_bold"
        android:text="@string/registrarse_bton"
        android:textAlignment="center"
        android:textSize="20sp" />
</LinearLayout>